--- a/resources/sass/auth.scss
+++ b/resources/sass/auth.scss
@@ -4,3 +4,116 @@
 
 @import "general";
 
+//
+// Layout styling
+//
+
+#app {
+    width: 100%;
+    height: 100%;
+    font-family: "Roboto", sans-serif;
+    background-color: hsl(0, 0%, 95%);
+    .v-application--wrap {
+        flex: 1;
+        display: flex;
+        min-height: auto;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        #content-wrapper {
+            flex: 1;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            #logo {
+                color: #000;
+                margin: 0 0 50px 0;
+                text-decoration: none;
+                box-sizing: border-box;
+                #logo-text {
+                    font-size: 3em;
+                    text-align: center;
+                    margin: 0 0 -15px 0;
+                    font-family: 'Special Elite', cursive;
+                }
+                h2 {
+                    margin: 0;
+                    font-size: 1.2em;
+                    font-weight: 300;
+                    text-align: center;
+                    color: hsl(0, 0%, 50%);
+                    font-family: 'Roboto', sans-serif;
+                }
+            }
+        }
+        #footer-wrapper {
+            flex: 0 0 50px;
+            #footer {
+                font-size: .8em;
+                text-align: center;
+                box-sizing: border-box;
+                padding: 100px 0 50px 0;
+                color: hsl(0, 0%, 50%);
+            }
+        }
+    }
+}
+
+//
+// Layout styling
+//
+
+
+//
+// Login
+//
+
+#login {
+    width: 500px;
+    padding: 25px;
+    display: flex;
+    margin: 0 auto;
+    border-radius: 3px;
+    flex-direction: row;
+    box-sizing: border-box;
+    background-color: #fff;
+    form {
+        width: 100%;
+    }
+    .form-controls {
+        margin: 15px 0 15px 0;
+    }
+    #no-account {
+        margin: 30px 0 0 0;
+    }
+}
+
+@media (max-width: 850px) {
+    #login {
+        width: 100%;
+        flex-wrap: wrap;
+        #login-left, #login-right {
+            flex: 0 0 100%;
+        }
+        #login-right {
+            border-left: 0;
+            border-top: 1px solid rgba(0, 0, 0, 0.1);
+        }
+    }
+}
+@media (max-width: 395px) {
+    #login {
+        #login-left {
+            .form-controls {
+                flex-wrap: wrap;
+                .form-controls__left, .form-controls__right {
+                    flex: 0 0 100%;
+                }
+                .form-controls__right {
+                    margin: 20px 0 -10px 0;
+                    justify-content: flex-start;
+                }
+            }
+        }
+    }
+}
