--- a/resources/sass/game.scss
+++ b/resources/sass/game.scss
@@ -3,3 +3,74 @@
 //
 
 @import "general";
+
+//
+// Layout styling
+//
+
+
+#app {
+    width: 100%;
+    height: 100%;
+    font-family: "Roboto", sans-serif;
+    background-color: hsl(0, 0%, 95%);
+    .v-application--wrap {
+        flex: 1;
+        display: flex;
+        min-height: auto;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center;
+        #topnav-wrapper {
+            width: 100%;
+            background-color: hsl(0, 0%, 90%);
+            #topnav {
+                color: #000;
+                height: 80px;
+                display: flex;
+                width: 1000px;
+                margin: 0 auto;
+                align-items: center;
+                flex-direction: row;
+                #topnav-logo {
+                    a, a:active, a:visited, a:link {
+                        color: #000;
+                        text-decoration: none;
+                        #topnav-logo__text {
+                            font-size: 1.5em;
+                            font-family: 'Special Elite', cursive;
+                        }
+                    }
+                }
+                #topnav-links {
+                    flex: 1;
+                    display: flex;
+                    list-style: none;
+                    flex-direction: row;
+                    align-items: center;
+                    justify-content: flex-end;
+                    li {
+                        a, a:active, a:visited, a:link {
+                            color: #000;
+                            text-decoration: none;
+                        }
+                    }
+                }
+            }
+        }
+        #content-wrapper {
+            flex: 1;
+            padding: 50px 0;
+            box-sizing: border-box;
+        }
+        #footer-wrapper {
+            #footer {
+                font-size: .8em;
+                text-align: center;
+                box-sizing: border-box;
+                padding: 50px 0 25px 0;
+                color: hsl(0, 0%, 50%);
+            }
+        }
+    }
+}
