--- a/resources/sass/auth.scss
+++ b/resources/sass/auth.scss
@@ -26,23 +26,25 @@
             flex-direction: column;
             justify-content: center;
             #logo {
-                color: #000;
                 margin: 0 0 50px 0;
-                text-decoration: none;
                 box-sizing: border-box;
-                #logo-text {
-                    font-size: 3em;
-                    text-align: center;
-                    margin: 0 0 -15px 0;
-                    font-family: 'Special Elite', cursive;
-                }
-                h2 {
-                    margin: 0;
-                    font-size: 1.2em;
-                    font-weight: 300;
-                    text-align: center;
-                    color: hsl(0, 0%, 50%);
-                    font-family: 'Roboto', sans-serif;
+                a, a:active, a:visited, a:link {
+                    color: #000;
+                    text-decoration: none;
+                    #logo-text {
+                        font-size: 3em;
+                        text-align: center;
+                        margin: 0 0 -15px 0;
+                        font-family: 'Special Elite', cursive;
+                    }
+                    h2 {
+                        margin: 0;
+                        font-size: 1.2em;
+                        font-weight: 300;
+                        text-align: center;
+                        color: hsl(0, 0%, 50%);
+                        font-family: 'Roboto', sans-serif;
+                    }
                 }
             }
         }
