--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -884,3 +884,25 @@ i {
   }
 }
 
+#recover-mail-sent {
+  width: 600px;
+  padding: 25px;
+  margin: 0 auto;
+  border-radius: 3px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+}
+
+#recover-mail-sent #recover-mail-sent__title {
+  text-align: center;
+}
+
+#recover-mail-sent #recover-mail-sent__text {
+  text-align: center;
+  margin: 0 0 15px 0;
+}
+
+#recover-mail-sent #recover-mail-sent__actions {
+  text-align: center;
+}
+
