--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -41,7 +41,8 @@ h1, h2, h3, h4, h5, h6 {
     font-family: 'Lato', sans-serif;
 }
 h1 {
-    font-size: 2em;
+    font-size: 4em;
+    font-weight: 700;
 }
 h2 {
     font-size: 1.5em;
