--- a/resources/sass/game.scss
+++ b/resources/sass/game.scss
@@ -59,6 +59,7 @@
         }
         #content-wrapper {
             flex: 1;
+            width: 1000px;
             padding: 50px 0;
             box-sizing: border-box;
         }
@@ -70,6 +71,32 @@
                 padding: 50px 0 25px 0;
                 color: hsl(0, 0%, 50%);
             }
+        }
+    }
+}
+
+//
+// Lobby
+//
+
+#lobby {
+    width: 100%;
+    #lobby-header {
+        margin: 0 0 50px 0;
+        #lobby-header__title {
+            margin: 0;
+            text-align: center;
+        }
+    }
+    #lobby-content {
+        display: flex;
+        flex-direction: row;
+        #lobby-content__left {
+            flex: 1;
+        }
+        #lobby-content__right {
+            flex: 0 0 300px;
+            margin: 0 0 0 30px;
         }
     }
 }
