--- a/resources/sass/game.scss
+++ b/resources/sass/game.scss
@@ -10,7 +10,7 @@
 
 #app {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     font-family: "Roboto", sans-serif;
     background-color: hsl(0, 0%, 95%);
     .v-application--wrap {
@@ -22,10 +22,11 @@
         justify-content: center;
         #topnav-wrapper {
             width: 100%;
+            flex: 0 0 80px;
             background-color: hsl(0, 0%, 90%);
             #topnav {
+                height: 100%;
                 color: #000;
-                height: 80px;
                 display: flex;
                 width: 1000px;
                 margin: 0 auto;
@@ -49,9 +50,19 @@
                     align-items: center;
                     justify-content: flex-end;
                     li {
+                        margin: 0 0 0 20px;
+                        &:first-child {
+                            margin: 0;
+                        }
                         a, a:active, a:visited, a:link {
-                            color: #000;
+                            color: #333;
+                            font-size: 1em;
+                            font-weight: 500;
+                            transition: all .3s;
                             text-decoration: none;
+                            &:hover {
+                                color: #000;
+                            }
                         }
                     }
                 }
@@ -64,6 +75,7 @@
             box-sizing: border-box;
         }
         #footer-wrapper {
+            flex: 0 0 100px;
             #footer {
                 font-size: .8em;
                 text-align: center;
