--- a/resources/sass/game.scss
+++ b/resources/sass/game.scss
@@ -20,8 +20,9 @@
 #app {
     width: 100%;
     min-height: 100%;
+    color: #ffffff;
     font-family: "Roboto", sans-serif;
-    background-color: hsl(0, 0%, 95%);
+    background-color: hsl(0, 0%, 0%);
     .v-application--wrap {
         flex: 1;
         display: flex;
@@ -31,22 +32,27 @@
         justify-content: center;
         #topnav-wrapper {
             width: 100%;
-            flex: 0 0 80px;
-            background-color: hsl(0, 0%, 90%);
+            flex: 0 0 50px;
+            background-color: hsl(0, 0%, 5%);
             #topnav {
                 height: 100%;
                 color: #000;
                 display: flex;
-                width: 1000px;
                 margin: 0 auto;
+                padding: 0 30px;
                 align-items: center;
                 flex-direction: row;
                 #topnav-logo {
+                    padding-top: 3px;
                     a, a:active, a:visited, a:link {
-                        color: #000;
+                        transition: all .3s;
                         text-decoration: none;
+                        color: rgba(255, 255, 255, 0.25);
+                        &:hover {
+                            color: rgba(255, 255, 255, 0.75);
+                        }
                         #topnav-logo__text {
-                            font-size: 1.5em;
+                            font-size: 1.3em;
                             font-family: 'Special Elite', cursive;
                         }
                     }
@@ -64,13 +70,13 @@
                             margin: 0;
                         }
                         a, a:active, a:visited, a:link {
-                            color: #333;
                             font-size: 1em;
                             font-weight: 400;
                             transition: all .3s;
                             text-decoration: none;
+                            color: rgba(255, 255, 255, 0.25);
                             &:hover {
-                                color: #000;
+                                color: rgba(255, 255, 255, 0.75);
                             }
                         }
                     }
@@ -79,19 +85,38 @@
         }
         #content-wrapper {
             flex: 1;
-            width: 1000px;
-            padding: 50px 0;
-            box-sizing: border-box;
+            width: 100%;
+            display: block;
+            .content {
+                padding: 30px;
+                box-sizing: border-box;
+            }
         }
         #footer-wrapper {
-            flex: 0 0 100px;
+            flex: 0 0 50px;
             #footer {
-                font-size: .8em;
+                font-size: .7em;
                 text-align: center;
                 box-sizing: border-box;
                 padding: 50px 0 25px 0;
-                color: hsl(0, 0%, 50%);
+                color: rgba(255, 255, 255, 0.1);
             }
         }
     }
+}
+
+//
+// Game styling
+//
+
+h1, h2, h3, h4, h5, h6 {
+    line-height: 1em;
+    margin: 0 0 15px 0;
+}
+
+h1 {
+    font-size: 2.5em;
+}
+h2 {
+    font-size: 1.5em;
 }
