--- a/public/css/lobby.css
+++ b/public/css/lobby.css
@@ -417,7 +417,7 @@ i {
 
 .dialog {
   position: relative;
-  background-color: white;
+  background-color: #121212;
 }
 
 .dialog .dialog__close-button {
@@ -478,6 +478,10 @@ i {
   margin: 0 0 15px 0;
 }
 
+.dialog .dialog-content .dialog-text.nm {
+  margin: 0;
+}
+
 .dialog .dialog-content .dialog-text.centered {
   text-align: center;
 }
@@ -501,7 +505,7 @@ i {
   padding: 25px;
   flex-direction: row;
   box-sizing: border-box;
-  background-color: #f2f2f2;
+  background-color: #0c0c0c;
 }
 
 .dialog .dialog-controls .dialog-controls__left,
