--- a/resources/sass/lobby.scss
+++ b/resources/sass/lobby.scss
@@ -23,18 +23,18 @@
         #topnav-wrapper {
             width: 100%;
             flex: 0 0 80px;
-            background-color: hsl(0, 0%, 90%);
+            background-color: hsl(0, 0%, 5%);
             #topnav {
                 height: 100%;
                 color: #000;
                 display: flex;
-                width: 1000px;
+                width: 1200px;
                 margin: 0 auto;
                 align-items: center;
                 flex-direction: row;
                 #topnav-logo {
                     a, a:active, a:visited, a:link {
-                        color: #000;
+                        color: #fff;
                         text-decoration: none;
                         #topnav-logo__text {
                             font-size: 1.5em;
@@ -55,13 +55,13 @@
                             margin: 0;
                         }
                         a, a:active, a:visited, a:link {
-                            color: #333;
                             font-size: 1em;
                             font-weight: 400;
                             transition: all .3s;
                             text-decoration: none;
+                            color: rgba(255, 255, 255, .75);
                             &:hover {
-                                color: #000;
+                                color: #fff;
                             }
                         }
                     }
@@ -70,7 +70,7 @@
         }
         #content-wrapper {
             flex: 1;
-            width: 1000px;
+            width: 1200px;
             padding: 50px 0;
             box-sizing: border-box;
         }
@@ -118,7 +118,7 @@
 //
 
 #leaderboards-wrapper {
-    width: 600px;
+    width: 1000px;
     margin: 0 auto;
 }
 
@@ -184,7 +184,10 @@
         display: flex;
         flex-direction: row;
         align-items: center;
-        justify-content: flex-end;
+        justify-content: center;
+        .v-btn {
+            margin: 0 15px;
+        }
     }
 }
 
