--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -384,7 +384,13 @@ i {
 
 .dialog {
     position: relative;
-    background-color: #121212;
+    background-color: #fff;
+    &.dark {
+        background-color: #121212;
+        .dialog-controls {
+            background-color: #0c0c0c;
+        }
+    }
     .dialog__close-button {
         top: 15px;
         right: 10px;
@@ -458,7 +464,7 @@ i {
         padding: 25px;
         flex-direction: row;
         box-sizing: border-box;
-        background-color: #0c0c0c;
+        background-color: #f5f5f5;
         .dialog-controls__left, .dialog-controls__right {
             flex: 1;
             display: flex;
