--- a/resources/sass/_general.scss
+++ b/resources/sass/_general.scss
@@ -96,6 +96,17 @@ i {
 }
 
 //
+// Colored text
+//
+
+.green-text {
+    color: #2db200;
+}
+.blue-text {
+    color: #0093e2;
+}
+
+//
 // Content
 //
 
