--- a/public/css/auth.css
+++ b/public/css/auth.css
@@ -99,6 +99,14 @@ i {
   color: #404040;
 }
 
+.green-text {
+  color: #2db200;
+}
+
+.blue-text {
+  color: #0093e2;
+}
+
 .content-title {
   font-size: 2em;
   font-weight: 500;
